--- a/PagedCache/PagedCache.csproj
+++ b/PagedCache/PagedCache.csproj
@@ -53,7 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LiteDbCache.cs" />
+    <Compile Include="PageCache.cs" />
+    <Compile Include="PagedCacheResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TryLite.cs" />
   </ItemGroup>
