--- a/PagedCache/PagedCache.csproj
+++ b/PagedCache/PagedCache.csproj
@@ -53,7 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PageCache.cs" />
+    <Compile Include="DbContext.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="PagedCache.cs" />
+    <Compile Include="PagedCacheConfig.cs" />
     <Compile Include="PagedCacheResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TryLite.cs" />
